--- a/homework/ANKETA/index.html
+++ b/homework/ANKETA/index.html
@@ -10,13 +10,35 @@
 
 <body>
     <script>
-        var lastName = prompt("Введите фамилию");
-        var firstName = prompt("Введите имя")
-        var middleName = prompt("Введите отчество");
-        var age = parseInt(prompt("Введите возраст"));
-        var gender = confirm("Ваш пол женский?");
-        var myGender
-        var pension
+
+        let lastName = prompt("Введите фамилию");
+
+
+        while (lastName === "" || lastName === null) {
+            lastName = prompt("Введите фамилию")  
+        }
+
+        let firstName = prompt("Введите имя")
+
+        while (firstName === "" || firstName === null) {
+            firstName = prompt("Введите имя")  
+        }
+
+        let middleName = prompt("Введите отчество");
+      
+        while (middleName === "" || middleName === null) {
+            middleName = prompt("Введите отчество")  
+        }
+
+        let age = parseInt(prompt("Введите возраст"));
+
+        while (!parseInt(age)) {
+            age = parseInt (prompt("Введите возраст корректно"))   
+            }         
+
+        let gender = confirm("Ваш пол женский?");
+        let myGender
+        let pension
 
         if (gender) {
             myGender = "женский"
@@ -33,6 +55,8 @@
                 pension = "нет"
             }
         }
+       
+
 
         alert(`Ваше ФИО: ${lastName} ${firstName} ${middleName}
 Ваш возраст в годах: ${age}
@@ -40,8 +64,9 @@
 через 5 лет Вам будет: ${age + 5}
 Ваш пол: ${myGender}
 вы на пенсии: ${pension}`)
+</script>
+   
 
-    </script>
 
 
 </body>
