--- a/homework/index.html
+++ b/homework/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/ANKETA/index.html">ANKETA(статус)</a>
+    <a href = https://maryiatatarevich.github.io/Masha-Tatarevich/homework/A2+/index.html>A2(статус)</a>
+    <a href = >A3(статус)</a>
+    <a href = >B1(статус)</a>
+    <a href = >B2(статус)</a>
+    
 </hr>
 </body>
 </html>
