--- a/homework/A2+/index.html
+++ b/homework/A2+/index.html
@@ -36,7 +36,7 @@
 
         let myResult = removeSpace(myString)
 
-        console.log(myResult)
+        alert (myResult)
 
     </script>
 </body>
