--- a/homework/index.html
+++ b/homework/index.html
@@ -7,11 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/ANKETA/index.html">ANKETA(статус)</a></br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/A2+/index.html">A2(статус)</a></br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/A3+/index.html">A3(статус)</a></br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B1+/index.html">B1(статус)</a></br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B2+/index.html">B2(статус)</a></br>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/ANKETA/index.html">ANKETA(статус)</a>
+    <br>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/A2+/index.html">A2(статус)</a>
+    <br>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/A3+/index.html">A3(статус)</a>
+    <br>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B1+/index.html">B1(статус)</a>
+    <br>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B2+/index.html">B2(статус)</a>
+    <br>
     
 </hr>
 </body>
