--- a/homework/A2+/index.html
+++ b/homework/A2+/index.html
@@ -21,10 +21,10 @@
         function removeSpace(string) {
 
             while (string.charAt(0) === ' ') {
-                string = string.slice(1) //+ ''
+                string = string.slice(1) + ''
             };
             while (string.charAt(string.length - 1) === ' ') {
-                string = string.slice(0, -1) //+ ''
+                string = string.slice(0, -1) + ''
             };
             let result
             if (string[0] !== ' ' && string.charAt(string.length - 1) !== ' ') {
