--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
     <title>Document</title>
 </head>
 <body>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/ANKETA/index.html">ANKETA(статус)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/ANKETA/index.html">ANKETA(Проверено)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/A2+/index.html">A2(статус)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/A2+/index.html">A2(Проверено)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/A3+/index.html">A3(статус)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/A3+/index.html">A3(Проверено)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B1+/index.html">B1(статус)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/A4+/index.html">A4(статус)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B2+/index.html">B2(статус)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/TREESUM/index.html">TREESUM(статус)</a>
+    <br>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B1+/index.html">B1(Проверено)</a>
+    <br>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B2+/index.html">B2(Проверено)</a>
     <br>
     
 </hr>
