--- a/homework/TREESUM/index.html
+++ b/homework/TREESUM/index.html
@@ -10,12 +10,8 @@
 
 <body>
     <script>
-        let myInput = prompt ('Введите массив');
-        let myArray = myInput.split(/[,]/);
-        myArray = myArray.map(Number);
-        
-        console.log(myArray)
-        let sum = 0
+        let myArray = [5, 7, [4, [2], 8, [1, 3], 2], [9, []], 1, 8] ;
+        let sum = 0;
         function treeSum(array) {
             for (let number of array) {
                 if (number.constructor === Array) {
@@ -27,8 +23,8 @@
             }
             return sum
         }
-        let myResult = treeSum(myArray)
-        alert(myResult)
+        let myResult = treeSum(myArray);
+        alert(myResult);
     </script>
 </body>
 
