--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/TREESUM/index.html">TREESUM(статус)</a>
     <br>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/COUNTRIES/index.html">TREESUM(статус)</a>
+    <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B1+/index.html">B1(Проверено)</a>
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B2+/index.html">B2(Проверено)</a>
