--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/TREESUM/index.html">TREESUM(статус)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/COUNTRIES/index.html">TREESUM(статус)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/COUNTRIES/index.html">COUNTRIES(статус)</a>
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B1+/index.html">B1(Проверено)</a>
     <br>
