added a new file: vowels

--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -4,27 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <script src="JS.js"></script>
     <title>Document</title>
 </head>
 <body>
     <div>
-        <input type="text" id="brand">
-        <input type="text" id="model">
-        <input type="text" id="price">
-        <input type="text" id="sale">
+        <label><input type="text" id="img">Изображение</label></br>
+        <label><input type="text" id="brand">Производитель</label></br>
+        <label><input type="text" id="model">Модель</label></br>
+        <label><input type="text" id="price">Цена</label></br>
+        <label><input type="text" id="sale">Sale</label></br>
     </div>
-    <button onclick="getValue()">Добавить</button>
-    <script>
-        let phones = [];
-        function getValue(){
-            const = document.getElementById("brand");
-            const = document.getElementById("brand");
-            const = document.getElementById("brand");
-            const = document.getElementById("brand");
+    <button onclick="getValue ()">Добавить</button>
+    <!-- <button onclick="()">Rendering</button>
+    <button onclick="()">Удалить</button> -->
+    <div id = "app"></div>
 
-        }
-
-
-    </script>
 </body>
 </html>
