--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B2+/index.html">B2(Проверено)</a>
     <br>
-    
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/VOWELS/index.html">VOWELS(Проверено)</a>
+    <br>
+
+  
 </hr>
 </body>
 </html>
