--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -14,7 +14,7 @@
         <label><input type="text" id="brand">Производитель</label></br>
         <label><input type="text" id="model">Модель</label></br>
         <label><input type="text" id="price">Цена</label></br>
-        <label><input type="text" id="sale">Sale</label></br>
+        <label><input type="text" id="sale">Распродажа</label></br>
     </div>
     <button onclick="getValue ()">Добавить</button>
     <!-- <button onclick="()">Rendering</button>
