--- a/index.html
+++ b/index.html
@@ -13,17 +13,19 @@
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/A3+/index.html">A3(Проверено)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/A4+/index.html">A4(статус)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/A4+/index.html">A4(Проверено)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/TREESUM/index.html">TREESUM(статус)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/TREESUM/index.html">TREESUM(Проверено)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/COUNTRIES/index.html">COUNTRIES(статус)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/COUNTRIES/index.html">COUNTRIES(Проверено)</a>
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B1+/index.html">B1(Проверено)</a>
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B2+/index.html">B2(Проверено)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/VOWELS/index.html">VOWELS(статус)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/VOWELS/index.html">VOWELS(Проверено)</a>
+    <br>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/VOWELS_ARR/index.html">VOWELS_ARR(статус)</a>
     <br>
 
   
