--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B5+/index.html">B5+(статус)</a>
     <br>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B6+/index.html">B6+(статус)</a>
+    <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/VOWELS/index.html">VOWELS(Проверено)</a>
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/VOWELS_ARR/index.html">VOWELS_ARR(статус)</a>
