--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/VOWELS/index.html">VOWELS(Проверено)</a>
     <br>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/MOOD/index.html">MOOD(статус)</a>
+    <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/VOWELS_ARR/index.html">VOWELS_ARR(статус)</a>
     <br>
 
