--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/VOWELS_ARR/index.html">VOWELS_ARR(статус)</a>
     <br>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/ROOTS/index.html">ROOTS(статус)</a>
+    <br>
 
   
 </hr>
