--- a/homework/COUNTRIES/index.html
+++ b/homework/COUNTRIES/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="javaScript.js"></script>
+    
     <title>COUNTRIES</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
@@ -14,7 +14,7 @@
     <button onclick="informInput()" class="btn btn-primary"; style="margin-bottom: 10px;">
         Ввод информации о стране
     </button> </br>
-    <button onclick="informReceiving()" class="btn btn-secondary"; style="margin-bottom: 10px;">
+    <button onclick="informRequest()" class="btn btn-secondary"; style="margin-bottom: 10px;">
         Получение информации о стране
     </button> </br>
     <button onclick="allCountries()" class="btn btn-success"; style="margin-bottom: 10px;">
@@ -24,5 +24,5 @@
         Удаление информации о стране
     </button>
 </body>
-
+<script src="javaScript.js"></script>
 </html>
