--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -5,21 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <script src="JS.js"></script>
+    <link href="CSS.css">
+    
     <title>Document</title>
 </head>
 <body>
     <div>
-        <label><input type="text" id="img">Изображение</label></br>
-        <label><input type="text" id="brand">Производитель</label></br>
-        <label><input type="text" id="model">Модель</label></br>
-        <label><input type="text" id="price">Цена</label></br>
-        <label><input type="text" id="sale">Распродажа</label></br>
+    <div class="card" style="width: 40rem;" style = 'margin-bottom: 40px'>
+        <div class="form-floating mb-3">
+            <input type="text" id="img" class="form-control" placeholder="name@example.com">
+            <label for = "img">Изображение</label>
+        </div>
+        <div class="form-floating mb-3">
+            <input type="text" id="brand" class="form-control" placeholder="name@example.com">
+            <label for = "brand">Производитель</label>
+        </div>
+        <div class="form-floating mb-3">
+            <input type="text" id="model" class="form-control" placeholder="name@example.com">
+            <label for = "model">Модель</label>
+        </div>
+        <div class="form-floating mb-3">
+            <input type="text" id="description" class="form-control" placeholder="name@example.com">
+            <label for = "description">Описание</label>
+        </div>
+        <div class="form-floating mb-3">
+            <input type="text" id="price" class="form-control" placeholder="name@example.com">
+            <label for = "price">Цена</label>
+        </div>
+        <div class="form-check">
+            <input type="checkbox" id="sale" class="form-check-input" placeholder="name@example.com">
+            <label for = "sale" class="form-check-label">Распродажа</label>
+        
     </div>
-    <button onclick="getValue ()">Добавить</button>
-    <!-- <button onclick="()">Rendering</button>
-    <button onclick="()">Удалить</button> -->
+    <button class="btn btn-primary" style = 'margin: 20px 20px 30px 10px' onclick="getValue ()">Добавить</button>
+    <button class="btn btn-primary" style = 'margin: 20px 20px 30px 10px' onclick="render()">Отобразить</button>
+    </div>      
     <div id = "app"></div>
 
 </body>
+<script src="JS.js"></script>
 </html>
