--- a/index.html
+++ b/index.html
@@ -23,19 +23,23 @@
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B2+/index.html">B2(Проверено)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B4+/index.html">B4+(статус)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B4+/index.html">B4+(Проверено)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B5+/index.html">B5+(статус)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B5+/index.html">B5+(Проверено)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B6+/index.html">B6+(статус)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B6+/index.html">B6+(Проверено)</a>
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/VOWELS/index.html">VOWELS(Проверено)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/MOOD/index.html">MOOD(статус)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/MOOD/index.html">MOOD(Проверено)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/VOWELS_ARR/index.html">VOWELS_ARR(статус)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/DRINKS_HASH_FUNC/index.html">DRINKS_HASH_FUNC(статус)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/ROOTS/index.html">ROOTS(статус)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/DRINKS_HASH_CLASS/index.html">DRINKS_HASH_CLASS(статус)</a>
+    <br>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/VOWELS_ARR/index.html">VOWELS_ARR(Проверено)</a>
+    <br>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/ROOTS/index.html">ROOTS(Проверено)</a>
     <br>
 
   
