--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/DRINKS_HASH_FUNC/index.html">DRINKS_HASH_FUNC(статус)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/DRINKS_HASH_CLASS/index.html">DRINKS_HASH_CLASS(статус)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/DRINKS_HASH_CLASS/index.html">DRINKS_HASH_CLASS(статус). Класс находится в отдельном JS файле</a>
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/VOWELS_ARR/index.html">VOWELS_ARR(Проверено)</a>
     <br>
