--- a/homework/B3+/calculator.html
+++ b/homework/B3+/calculator.html
@@ -43,6 +43,14 @@
 
         </div>
     </div>
+    <script>
+        function onDisplayNum(number){
+            document.getElementById("input").innerHTML +=number 
+        }
+
+        function onDisplayResult(){
+        }
+    </script>
 
 <script src="calculator.js"></script>   
 </body>
