--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B2+/index.html">B2(Проверено)</a>
     <br>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B3+/index.html">B3(статус)</a>
+    <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B4+/index.html">B4+(Проверено)</a>
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B5+/index.html">B5+(Проверено)</a>
@@ -40,6 +42,8 @@
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/VOWELS_ARR/index.html">VOWELS_ARR(Проверено)</a>
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/ROOTS/index.html">ROOTS(Проверено)</a>
+    <br>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/DYN_FORM/index.html">DYN_FORM(статус)</a>
     <br>
 
   
