--- a/homework/B3+/calculator.html
+++ b/homework/B3+/calculator.html
@@ -1,57 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="calculator.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <title>B3+</title>
 </head>
+
 <body>
     <div class="calculator">
-        <div class="display">
-            <p id="input" class="input" >  </p>  
-        </div>
-        <div class="toolbar">
-            <div class="firstRow">
-                <button value="7" onclick="onDisplayNum(value)">7</button>
-                <button value="8" onclick="onDisplayNum(value)">8</button>
-                <button value="9" onclick="onDisplayNum(value)">9</button>
-                <button value="(" onclick="onDisplayNum(value)">(</button>
-                <button value=")" onclick="onDisplayNum(value)">)</button>
+        <p class="display" id="input" > </p>
+        <div class="too lbar">
+            <div class="firstRow" class='btn-group me-2'>
+                <button class="btn btn-outline-secondary" value="7" onclick="onDisplayNum(value)">7</button>
+                <button class="btn btn-outline-secondary" value="8" onclick="onDisplayNum(value)">8</button>
+                <button class="btn btn-outline-secondary" value="9" onclick="onDisplayNum(value)">9</button>
+                <button class="btn btn-outline-secondary" value="(" onclick="onDisplayNum(value)">(</button>
+                <button class="btn btn-outline-secondary" value=")" onclick="onDisplayNum(value)">)</button>
             </div>
             <div class="secondRow">
-                <button value="4" onclick="onDisplayNum(value)">4</button>
-                <button value="5" onclick="onDisplayNum(value)">5</button>
-                <button value="6" onclick="onDisplayNum(value)">6</button>
-                <button value="+" onclick="onDisplayNum(value)">+</button>
-                <button value="-" onclick="onDisplayNum(value)">-</button>
+                <button class="btn btn-outline-secondary" value="4" onclick="onDisplayNum(value)">4</button>
+                <button class="btn btn-outline-secondary" value="5" onclick="onDisplayNum(value)">5</button>
+                <button class="btn btn-outline-secondary" value="6" onclick="onDisplayNum(value)">6</button>
+                <button class="btn btn-outline-secondary" value="+" onclick="onDisplayNum(value)">+</button>
+                <button class="btn btn-outline-secondary" value="-" onclick="onDisplayNum(value)">-</button>
             </div>
             <div class="thirdRow">
-                <button value="1" onclick="onDisplayNum(value)">1</button>  
-                <button value="2" onclick="onDisplayNum(value)">2</button>  
-                <button value="3" onclick="onDisplayNum(value)">3</button>
-                <button value="*" onclick="onDisplayNum(value)">*</button>
-                <button value="/" onclick="onDisplayNum(value)">/</button>
+                <button class="btn btn-outline-secondary" value="1" onclick="onDisplayNum(value)">1</button>
+                <button class="btn btn-outline-secondary" value="2" onclick="onDisplayNum(value)">2</button>
+                <button class="btn btn-outline-secondary" value="3" onclick="onDisplayNum(value)">3</button>
+                <button class="btn btn-outline-secondary" value="*" onclick="onDisplayNum(value)">*</button>
+                <button class="btn btn-outline-secondary" value="/" onclick="onDisplayNum(value)">/</button>
             </div>
             <div class="fourthRow">
-                <button value="-" onclick="onDisplayNum(value)">+/-</button>  
-                <button value="0" onclick="onDisplayNum(value)">0</button> 
-                <button value="." onclick="onDisplayNum(value)">.</button>
-                <button value="=" onclick="onDisplayResult()">=</button>
-                <button value="C" onclick="onDisplayNum(value)">C</button>
+                <button class="btn btn-outline-secondary" value="0" onclick="onDisplayNum(value)">0</button>
+                <button class="btn btn-outline-secondary" value="." onclick="onDisplayNum(value)">.</button>
+                <button class="btn btn-outline-secondary" value="C" onclick="clearInputField()" >C</button>
+                <button class="btn btn-outline-secondary" value="=" onclick="onDisplayResult()" style="width: 84px;">=</button>
 
+            </div>
         </div>
-    </div>
-    <script>
-        function onDisplayNum(number){
-            document.getElementById("input").innerHTML +=number 
-        }
+        <script>
+            function onDisplayNum(number) {
+                document.getElementById("input").innerHTML += number
+            }
 
-        function onDisplayResult(){
-        }
-    </script>
+            function onDisplayResult() {
+                let myEnter = document.getElementById("input").innerHTML
+                let myResult = calculation(myEnter)
+                document.getElementById("input").innerHTML = myResult
+            }
 
-<script src="calculator.js"></script>   
+            function clearInputField(){
+                document.getElementById("input").innerHTML = ''
+            }
+
+        </script>
+
+        <script src="calculator.js"></script>
 </body>
+
 </html>
