--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -41,6 +41,12 @@
     <button class="btn btn-primary" style = 'margin: 20px 20px 30px 10px' onclick="render()">Отобразить</button>
     </div>      
     <div id = "app"></div>
+    <div id = 'basket' style="background-color: aqua; width: 300px; height: 300px;"
+    ondrop = 'divDrop(event)'
+    ondragover="divDragOver(event)"
+    ondragenter="divDragEnter(event)"
+    ondragleave="divDragLeave(event)">
+    </div>
 
 </body>
 <script src="JS.js"></script>
