--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
 <body>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/ANKETA/index.html">ANKETA(Проверено)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/A2+/index.html">A2(Проверено)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/A2+/index.html">A2+(Проверено)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/A3+/index.html">A3(Проверено)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/A3+/index.html">A3+(Проверено)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/A4+/index.html">A4(Проверено)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/A4+/index.html">A4+(Проверено)</a>
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/TREESUM/index.html">TREESUM(Проверено)</a>
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/COUNTRIES/index.html">COUNTRIES(Проверено)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B1+/index.html">B1(Проверено)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B1+/index.html">B1+(Проверено)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B2+/index.html">B2(Проверено)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B2+/index.html">B2+(Проверено)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B3+/index.html">B3(статус)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B3+/index.html">B3+(СТАТУС)</a>
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B4+/index.html">B4+(Проверено)</a>
     <br>
@@ -35,15 +35,15 @@
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/MOOD/index.html">MOOD(Проверено)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/DRINKS_HASH_FUNC/index.html">DRINKS_HASH_FUNC(статус)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/DRINKS_HASH_FUNC/index.html">DRINKS_HASH_FUNC(СТАТУС)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/DRINKS_HASH_CLASS/index.html">DRINKS_HASH_CLASS(статус). Класс находится в отдельном JS файле</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/DRINKS_HASH_CLASS/index.html">DRINKS_HASH_CLASS(СТАТУС). Класс находится в отдельном JS файле</a>
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/VOWELS_ARR/index.html">VOWELS_ARR(Проверено)</a>
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/ROOTS/index.html">ROOTS(Проверено)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/DYN_FORM/index.html">DYN_FORM(статус)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/DYN_FORM/index.html">DYN_FORM(СТАТУС)</a>
     <br>
 
   
