change MAIN FILE

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B2+/index.html">B2+(Проверено)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B3+/index.html">B3+(СТАТУС)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B3+/index.html">B3+(Проверено)</a>
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/B4+/index.html">B4+(Проверено)</a>
     <br>
@@ -35,16 +35,21 @@
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/MOOD/index.html">MOOD(Проверено)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/DRINKS_HASH_FUNC/index.html">DRINKS_HASH_FUNC(СТАТУС)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/DRINKS_HASH_FUNC/index.html">DRINKS_HASH_FUNC(Проверено)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/DRINKS_HASH_CLASS/index.html">DRINKS_HASH_CLASS(СТАТУС). Класс находится в отдельном JS файле</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/DRINKS_HASH_CLASS/index.html">DRINKS_HASH_CLASS(Проверено). Класс находится в отдельном JS файле</a>
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/VOWELS_ARR/index.html">VOWELS_ARR(Проверено)</a>
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/ROOTS/index.html">ROOTS(Проверено)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/DYN_FORM/index.html">DYN_FORM(СТАТУС)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/DYN_FORM/index.html">DYN_FORM(Проверено)</a>
     <br>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/VALID_FORM/index.html">VALID_FORM(СТАТУС)</a>
+    <br>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/SQUARE_MOVE/index.html">SQUARE_MOVE(СТАТУС)</a>
+    <br>
+
 
   
 </hr>
