--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/DRINKS_HASH_FUNC/index.html">DRINKS_HASH_FUNC(Проверено)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/DRINKS_HASH_CLASS/index.html">DRINKS_HASH_CLASS(Проверено). Класс находится в отдельном JS файле</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/DRINKS_HASH_CLASS/index.html">DRINKS_HASH_CLASS(Проверено)</a>
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/VOWELS_ARR/index.html">VOWELS_ARR(Проверено)</a>
     <br>
@@ -49,9 +49,9 @@
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/SQUARE_MOVE/index.html">SQUARE_MOVE(СТАТУС)</a>
     <br>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/CLOCK_DOM/index.html">CLOCK_DOM(СТАТУС)</a>
+    <br>
 
-
-  
 </hr>
 </body>
 </html>
