--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/CLOCK_DOM/index.html">CLOCK_DOM(СТАТУС)</a>
     <br>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/CLOCK_SVG/index.html">CLOCK_SVG(СТАТУС)</a>
+    <br>
 
 </hr>
 </body>
