--- a/index.html
+++ b/index.html
@@ -45,13 +45,15 @@
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/DYN_FORM/index.html">DYN_FORM(Проверено)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/VALID_FORM/index.html">VALID_FORM(СТАТУС)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/VALID_FORM/index.html">VALID_FORM(Проверено)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/SQUARE_MOVE/index.html">SQUARE_MOVE(СТАТУС)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/SQUARE_MOVE/index.html">SQUARE_MOVE(Проверено)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/CLOCK_DOM/index.html">CLOCK_DOM(СТАТУС)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/CLOCK_DOM/index.html">CLOCK_DOM(Проверено)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/CLOCK_SVG/index.html">CLOCK_SVG(СТАТУС)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/CLOCK_SVG/index.html">CLOCK_SVG(Проверено)</a>
+    <br>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/CLOCK_CANVAS/index.html">CLOCK_CANVAS(СТАТУС)</a>
     <br>
 
 </hr>
