--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/CLOCK_CANVAS/index.html">CLOCK_CANVAS(СТАТУС)</a>
     <br>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/TENNIS_DOM/index.html">TENNIS_DOM(СТАТУС)</a>
+    <br>
 
 </hr>
 </body>
