--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/CLOCK_SVG/index.html">CLOCK_SVG(Проверено)</a>
     <br>
-    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/CLOCK_CANVAS/index.html">CLOCK_CANVAS(СТАТУС)</a>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/CLOCK_CANVAS/index.html">CLOCK_CANVAS(Проверено)</a>
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/homework/TENNIS_DOM/index.html">TENNIS_DOM(СТАТУС)</a>
+    <br>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/myProject/index.html">myProject</a>
     <br>
 
 </hr>
