--- a/myProject/index.html
+++ b/myProject/index.html
@@ -44,7 +44,6 @@
             background-size: 101% auto;
             
         }
-
         .car {
             width: 25px;
             height: 25px;
@@ -58,7 +57,7 @@
 
         }
         .vertically{
-            background: url('vertical.png') no-repeat;
+            background: url('vertically.png') no-repeat;
             background-size: 101% auto;
             background-position: 0px -9px;
         }
